--- a/about/index.html
+++ b/about/index.html
@@ -3,8 +3,30 @@ layout: default
 title: 关于
 ---
 
-<section class="self-intro  fadeInDown animated">
-Author : {{ site.data.brume.author }}<br/>
-Email : {{ site.data.brume.email }}<br/>
-{{ site.data.brume.description }}<br/>
+<section  class="conent fadeInDown animated" style="width:700px;">
+<div id="aboutme-cyningsun" class=" aboutme-embed aboutme-default aboutme-layout-vertical"
+style="visibility: inherit; display: block;">
+    <div class="aboutme-content">
+        <div class="aboutme-img" style="width: auto;">
+            <a target="_top">
+                <img src="{{ site.url }}/public/images/aboutme.jpg">
+            </a>
+        </div>
+        <div class="aboutme-text">
+            <div class="aboutme-name">
+                <a href="http://about.me/cyningsun" target="_top">
+                    cyning sun
+                </a>
+            </div>
+            <div class="aboutme-headline">
+                Life‘s a Struggle!
+            </div>
+            <div class="aboutme-apps">
+                <a href="https://github.com/cyningsun" class="app-github" title="GitHub"target="_top">&nbsp;</a>
+				<a href="http://weibo.com/CyningSun" class="app-sinaWeibo" title="Weibo"target="_top">&nbsp;</a>
+				<a href="mailto:sunyinhangscut@gmail.com" class="app-gmail" title="Gmail"target="_top">&nbsp;</a>
+            </div>
+        </div>
+    </div>
+</div>
 </section>
