--- a/about/index.html
+++ b/about/index.html
@@ -14,8 +14,8 @@ style="visibility: inherit; display: block;">
         </div>
         <div class="aboutme-text">
             <div class="aboutme-name">
-                <a href="http://about.me/cyningsun" target="_top">
-                    cyning sun
+                <a target="_top">
+                    cyningsun
                 </a>
             </div>
             <div class="aboutme-headline">
