--- a/about/index.html
+++ b/about/index.html
@@ -24,7 +24,8 @@ style="visibility: inherit; display: block;">
             <div class="aboutme-apps">
                 <a href="https://github.com/cyningsun" class="app-github" title="GitHub"target="_top">&nbsp;</a>
 				<a href="http://weibo.com/CyningSun" class="app-sinaWeibo" title="Weibo"target="_top">&nbsp;</a>
-				<a href="mailto:sunyinhangscut@gmail.com" class="app-gmail" title="Gmail"target="_top">&nbsp;</a>
+                <a href="mailto:sunyinhangscut@gmail.com" class="app-gmail" title="Gmail"target="_top">&nbsp;</a>
+                <a href="https://www.douban.com/people/cyningscut" class="app-douban" title="Douban"target="_top">&nbsp;</a>
             </div>
         </div>
     </div>
