fix url & add new blog

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: 有疑者说
       <li>
         <span>
           <h4>
-            <a href="{{ site.url }}/{{ post.url }}">
+            <a href="{{ site.url }}{{ post.url }}">
               {{ post.title }}
             </a>
             {{ fresh_tag }}
