--- a/list.html
+++ b/list.html
@@ -8,3 +8,4 @@ title: All Posts
     <li><span><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a> <time class="pull-right post-list">{{ post.date | date_to_string | date: "%b %-d, %Y"  }}</h4></time></span></span></li>
   {% endfor %}
 </ul>
+</div>
